--- a/react_contacts_hw_2/my-app/src/App.css
+++ b/react_contacts_hw_2/my-app/src/App.css
@@ -1,5 +1,5 @@
 .formContainer {
-    max-width: 500px;
+    width: 500px;
     max-height: 600px; 
     background-color: #f0fbff;
     border-radius: 10px;
@@ -24,5 +24,21 @@ button {
 
 input {
     margin-top: 20px;
+}
+
+.errorMsg {
+    font-size: 12px;
+    color: #ff1c4d;
+}
+
+.closeIcon {
+    float: right;
+    margin: 30px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.closeIcon:hover {
+    background-color: #88ccfc;
 }
 
