--- a/react_edit_contacts_hw_3/my-app/src/App.css
+++ b/react_edit_contacts_hw_3/my-app/src/App.css
@@ -15,3 +15,20 @@
 .right {
   right: 0;
 }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.contactListItem {
+  float: left;
+  cursor: pointer;
+}
+
+.contactListItem:hover {
+  background-color: #bcecf7;
+}
