--- a/react_users_router_hw_6/my-app/src/App.css
+++ b/react_users_router_hw_6/my-app/src/App.css
@@ -1,7 +1,7 @@
 .formContainer {
     width: 500px;
     max-height: 600px; 
-    background-color: #f0fbff;
+    background-color: #d7eef7;
     border-radius: 10px;
     position: absolute;
     top: 25%;
