--- a/react_redux_todo_hw_5/my-app/src/App.css
+++ b/react_redux_todo_hw_5/my-app/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+button {
+  width: 10%;
+  height: 20px;
+  border: none;
+  background-color: #939af5;
+  float: right
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button:hover {
+  background-color: #abb1f5;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  border: none;
+  border-bottom: 1px solid #000000;
 }
